--- a/app/src/main/res/drawable/indicator_selected.xml
+++ b/app/src/main/res/drawable/indicator_selected.xml
@@ -8,7 +8,7 @@
             android:thickness="2dp"
             android:useLevel="false">
 
-            <solid android:color="@color/oren_gedang" />
+            <solid android:color="@color/yellow_gedang" />
 
 
 
